--- a/res/menu/activity_base.xml
+++ b/res/menu/activity_base.xml
@@ -19,9 +19,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_about"
+        android:title="About"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/menu_settings"
         android:orderInCategory="1000"
         android:title="@string/menu_settings"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
 </menu>
