--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -57,4 +57,11 @@
             android:summary="@string/settings_delete_cache_summary"
             android:title="@string/settings_delete_cache_title" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="About">
+        <Preference
+            android:icon="@mipmap/ic_launcher"
+            android:key="aboutver"
+            android:summary="version 4.0.1\nBuilt 20 March 2022"
+            android:title="jpb Music (Eleven)" />
+    </PreferenceCategory>
 </PreferenceScreen>
