--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -15,7 +15,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Main TitlePageIndicator titles -->
     <string-array name="page_titles" translatable="false">
@@ -23,6 +23,36 @@
         <item>@string/page_albums</item>
         <item>@string/page_songs</item>
         <item>@string/page_playlists</item>
+    </string-array>
+
+    <string-array name="language" translatable="false">
+        <item>@string/follow_system</item>
+        <item>en</item>
+        <item>zh-Hans</item>
+        <item>zh-Hant</item>
+        <item>ru</item>
+        <item>uk</item>
+    </string-array>
+
+    <string-array name="language_value" translatable="false">
+        <item>SYSTEM</item>
+        <item>en-GB</item>
+        <item>zh-CN</item>
+        <item>zh-TW</item>
+        <item>ru</item>
+        <item>uk</item>
+    </string-array>
+
+    <string-array name="list_dark_mode" tools:ignore="InconsistentArrays">
+        <item>@string/array_dark_mode_off</item>
+        <item>@string/array_dark_mode_on</item>
+        <item>@string/array_dark_mode_system</item>
+    </string-array>
+
+    <string-array name="list_dark_mode_value" tools:ignore="InconsistentArrays">
+        <item>off</item>
+        <item>on</item>
+        <item>system</item>
     </string-array>
 
 </resources>
