--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -58,11 +58,31 @@
             android:summary="@string/settings_delete_cache_summary"
             android:title="@string/settings_delete_cache_title" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="UI">
+        <SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="md3"
+            android:title="Material Design 3" />
+        <ListPreference
+            app:defaultValue="SYSTEM"
+            app:entries="@array/language"
+            app:entryValues="@array/language_value"
+            app:key="locale"
+            app:summary="%s"
+            app:title="Pick language" />
+        <ListPreference
+            app:defaultValue="system"
+            app:entries="@array/list_dark_mode"
+            app:entryValues="@array/list_dark_mode_value"
+            app:key="darkMode"
+            app:summary="%s"
+            app:title="Dark Mode" />
+    </PreferenceCategory>
     <PreferenceCategory android:title="About">
         <Preference
             android:icon="@mipmap/ic_launcher"
             android:key="aboutver"
-            android:summary="version 4.1.0\nBuilt 28 March 2022"
+            android:summary="version 4.1.0\nBuilt 2 April 2022"
             android:title="jpb Music (Eleven)" />
     </PreferenceCategory>
 </PreferenceScreen>
