--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -49,7 +49,7 @@
 
     </PreferenceCategory>
 
-    <!-- Storage catetory -->
+    <!-- Storage category -->
     <PreferenceCategory android:title="@string/settings_storage_category" >
 
         <!-- Delete cache -->
