Update build date
Signed-off-by: jpbandroid <jakub.baranski.33@gmail.com>

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -49,7 +49,7 @@
 
     </PreferenceCategory>
 
-    <!-- Storage catetory -->
+    <!-- Storage category -->
     <PreferenceCategory android:title="@string/settings_storage_category" >
 
         <!-- Delete cache -->
@@ -62,7 +62,7 @@
         <Preference
             android:icon="@mipmap/ic_launcher"
             android:key="aboutver"
-            android:summary="version 5.0\nBuilt 11 October 2022"
+            android:summary="version 5.0\nBuilt 16 October 2022"
             android:title="jpb Music (Eleven)" />
     </PreferenceCategory>
 </PreferenceScreen>
