--- a/res/layout/audio_player_header_bar.xml
+++ b/res/layout/audio_player_header_bar.xml
@@ -38,12 +38,8 @@
             android:id="@+id/header_bar_song_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit ="marquee_forever"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_medium"
@@ -54,12 +50,8 @@
             android:id="@+id/header_bar_artist_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit ="marquee_forever"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:paddingBottom="2dp"
             android:textAllCaps="true"
             android:textColor="@color/white"
